# CerNet

./: README.md
11pDiff/: gongcun.patch
GeoNetworking/: itsnet-sample.conf  itsnet.conf  kill-sample.sh  kill.sh  startOBU-sample.sh  startOBU.sh
GeoNetworking/lib/: Makefile  Makefile.am  Makefile.in  ll_addr.c  ll_proto.c  ll_types.c  utils.c
GeoNetworking/lib/.deps/: dnet_ntop.Po  dnet_pton.Po  inet_proto.Po  ipx_ntop.Po  ipx_pton.Po  libnetlink.Po  ll_addr.Po  ll_map.Po  ll_proto.Po  ll_types.Po  rt_names.Po  utils.Po
GeoNetworking/position-sensor/: Makefile  demo  demo.c  itsnet_header.h  itsnet_types.h  position_sensor  position_sensor.c  position_sensor.c.old
GeoNetworking/src/: .beaconing.c.swo  .beaconing.c.swp  Makefile  Makefile.am  Makefile.in  Makefile.new  auto_wifi.c  auto_wifi.h  beaconing.c  beaconing.h  cbf.c  cbf.h  debug.c  debug.h  dll_sap.c  dll_sap.h  geo_anycast.c  geo_anycast.h  geo_broadcast.c  geo_broadcast.h  geo_topo.c  geo_topo.h  geo_unicast.c  geo_unicast.h  greedy.c  greedy.h  itsnet  itsnet.c  itsnet.h  itsnet_event_service.c  itsnet_event_service.h  itsnet_header.h  itsnet_ip.c  itsnet_ip.h  itsnet_listener.c  itsnet_listener.h  itsnet_parser.c  itsnet_parser.h  itsnet_pseudonym.c  itsnet_pseudonym.h  (+27 more)
NAT.config/scripts/: init_all  insert_modules  nat_obu_config  nat_rsu_config  network_config  start_3g_device  start_ap_mode  start_rsu_client
app.Android/Android/: import-summary.txt  local.properties
app.Web/vanet/: center.html  demo.html  index.html  left.html  map.html  right.html  upload.php
app.Web/vanet/css/: all.css  (+3 more)
(+103 files in other folders)
